<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.christian.quickcart.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_PantryFragment"
            app:destination="@id/PantryFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.christian.quickcart.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/AddItemFragment"
        android:name="com.christian.quickcart.AddItemFragment"
        android:label="@string/add_item_fragment_label"
        tools:layout="@layout/fragment_add_item" />
    <fragment
        android:id="@+id/PantryFragment"
        android:name="com.christian.quickcart.PantryFragment"
        android:label="@string/pantry_fragment_label"
        tools:layout="@layout/fragment_pantry" />
    <fragment
        android:id="@+id/AddPantryItemFragment"
        android:name="com.christian.quickcart.AddPantryItemFragment"
        android:label="@string/add_pantry_fragment_label"
        tools:layout="@layout/fragment_add_pantry_item" />
</navigation>
